# games

./: .gitignore  Cargo.toml  LEGAL.md  LICENSE-BSD3.txt  README.md
.nix/: flake.nix
connect_4/: Cargo.toml  README.md
connect_4/src/: main.rs
examples/connect_4_bot/: Cargo.toml
examples/connect_4_bot/src/: lib.rs
examples/gravitrips_bot/: Cargo.toml
examples/gravitrips_bot/src/: lib.rs
gravitrips/: Cargo.toml  README.md
gravitrips/src/: main.rs
site/: Cargo.toml  README.md
site/migrations/: 20260206062851_init.sql
site/src/: database.rs  main.rs
site/templates/: base.html  navfree_base.html
site/templates/pages/: admin.html  games.html  games_.html  login.html  profile.html  settings.html  signup.html
site/templates/pages/admin/: end_code.html  event.html  game.html
site/templates/pages/games/: chess.html  gravitrips.html
site/templates/partials/: _nav.html  admin.html  games.html  games_.html  login.html  profile.html  settings.html  signup.html
site/templates/partials/admin/: end_code.html  event.html  game.html
site/templates/partials/games/: chess.html  gravitrips.html
wit/: connect.wit  gravitrips.wit
