[workspace]
resolver = "3"
members = ["gravitrips", "examples/*", "site"]

[profile.dev.package.gravitrips]
overflow-checks = false

[workspace.dependencies]
# wasm
wasmtime = "41.0.0"
wit-bindgen = "0.51.0"

# server
axum = "0.8.8"
tokio = { version = "1.0", features = ["full"] }
tower = "0.5.3"
axum-htmx = "0.8.1"
minijinja = { version = "2.15.1", features = ["loader"] }
once_cell = "1.21.3"
# sqlx = "0.8.6"