[package]
name = "site"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
axum-htmx = { workspace = true }
minijinja = { workspace = true }
once_cell = { workspace = true }
serde = "1.0.228"
tower-http = { version = "0.6.8", features = ["trace", "catch-panic"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
